@@ -3,6 +3,7 @@ Version 1.18.6 *
 - added highlighting of project entries while running
 - added function to "Save as..." for the project options file
 - added licensed GAMS solvers to license text and dropped solver matrix
+- fixed usage of license file specified via the `gamsconfig.yaml`
 - fixed crash after "Save as..." of the changelog
 - fixed color theme issue when Windows is in dark mode and Studio is using light mode
 - fixed incorrect entry count for model library tabs
